# music-player

./: Cargo.toml  default.nix  flake.nix
src/: main.rs  theme.rs
