[package]
name    = "music-player"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", features = [
	"font-kit", # allows text to be rendered on macos
	"wayland",
	"x11",
] }
anyhow = "1.0"
# sqlx = { version = "0.9", features = [
# 	"runtime-tokio",
# 	"tls-rustls-ring-webpki",
# 	"sqlite",
# ] }
